Update to ruby 2.3.1 and fix ad not showing

--- a/app/assets/stylesheets/main-chrome.less
+++ b/app/assets/stylesheets/main-chrome.less
@@ -87,7 +87,7 @@ body,html
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: @zindex-navbar; 
+  z-index: @zindex-navbar;
 
   .alert
   {
@@ -121,7 +121,7 @@ body,html
   width: @asside-width;
   position: fixed;
   left: 0;
-  bottom: @asside-ad-height + @grid-gutter-width;
+  bottom: 0; //@asside-ad-height + @grid-gutter-width;
   top: 0;
   padding: @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width * 2;
   background: @asside-bg;
